--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+<meta name="keywords" content="ferragem, eletrica, movelaria, ferramentas, colas, distribuidora, fornecedor, lote, quantidade">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>- GALLE -</title>
@@ -51,10 +52,10 @@
 				LHE AJUDAR HOJE?
             </h1>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
-                Lorem ipsum dolor sit amet, id nec enim autem oblique, ei dico mentitum duo.
-                <br> Illum iusto laoreet his te. Lorem partiendo mel ex. Ad vitae admodum voluptatum per.
+                Pensando em você, criamos um canal personalizado de atendimento via WhatsApp.
+                <br> Clique no Botão abaixo para entrar em contato conosco.
             </p>
-            <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Get Started</a>
+            <a href="https://api.whatsapp.com/send?phone=5554981571186&text=Ol%C3%A1,%20Me%20Chamo%20..." target="_blank"  data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green"><i class="fa fa-whatsapp" aria-hidden="true"></i> WhatsApp</a>
         </div>
     </div>
     <!-- three-blcok -->
@@ -63,17 +64,17 @@
         <div class="row">
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-1.jpg" alt="Anti-spam" class="mx-auto">
-                <h4>Anti-spam</h4>
-                <p>Lorem ipsum dolor sit amet porro his no his deleniti</p>
+                <h4>Movelaria</h4>
+                <p>Pequena descrição da área</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-2.jpg" alt="Phishing Detect" class="mx-auto">
-                <h4>Phishing Detect</h4>
+                <h4>Elétrica</h4>
                 <p>Ne error antiopam usu. Sed vocen concludaturque ea</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-3.jpg" alt="Smart Scan" class="mx-auto">
-                <h4>Smart Scan</h4>
+                <h4>Ferragens</h4>
                 <p>Et usu ocurreret elaboraret doctus prodesse assueverit.</p>
             </div>
         </div>
