--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
                     <h2 class="font-weight-bold"><font color="#fff">Baixe Nossos Catálogos</font></h2>
                     <p class="my-4"><font color="#fff">Se você não encontrar o que estava procurando,</font>
-                        <br> <a href="#">Entre em Contato</a> <font color="#fff">para saber mais!</font></p>
+                        <br> <a href="https://api.whatsapp.com/send?phone=5554981571186&t" target="_blank">Entre em Contato</a> <font color="#fff">para saber mais!</font></p>
 					<button class="btn my-4 font-weight-bold atlas-cta cta-green" onclick="exibirDownloads()"> Ver Lista de Catálogos</button>
 	<div id="tabelaDownloads" style="display:none;">
   <table style="TABLE-LAYOUT: fixed;" class="table"  bgcolor="#64686d">
@@ -136,12 +136,7 @@
 
   </tbody>
 </table>
-<script type="text/javascript">
-				$(function() {
-  $('.tablesorter').tablesorter();
-  $('.tablepager').tablepager();
-});
-			</script>
+
 </div>
                 </div>
 				<br>
@@ -152,45 +147,6 @@
         </div>
     </div>
 
-    <!-- price table -->
-    <div class="container my-5 py-2" id="price-table">
-        <h2 class="text-center font-weight-bold d-block mb-3">Check our pricing</h2>
-        <div class="row">
-            <div data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center py-4 mt-5">
-                <h4 class="my-4">STARTUP</h4>
-                <p class="font-weight-bold">$ <span class="display-2 font-weight-bold">0</span> / MO.</p>
-                <ul class="list-unstyled">
-                    <li>Up to 5 Documents</li>
-                    <li>Up to 3 Reviews</li>
-                    <li>5 team Members</li>
-                    <li>Limited Support</li>
-                </ul>
-                <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-ghost">Get Free</a>
-            </div>
-            <div data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center py-4 mt-5 rounded" id="price-table__premium">
-                <h4 class="my-4">PREMIUM</h4>
-                <p class="font-weight-bold">$ <span class="display-2 font-weight-bold">10</span> / MO.</p>
-                <ul class="list-unstyled">
-                    <li>Up to 15 Documents</li>
-                    <li>Up to 10 Reviews</li>
-                    <li>25 team Members</li>
-                    <li>Limited Support</li>
-                </ul>
-                <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-green">Get Free</a>
-            </div>
-            <div data-aos="fade-left" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center py-4 mt-5">
-                <h4 class="my-4">PROFESSIONAL</h4>
-                <p class="font-weight-bold">$ <span class="display-2 font-weight-bold">30</span> / MO.</p>
-                <ul class="list-unstyled">
-                    <li>Unlimited Documents</li>
-                    <li>Unlimited Reviews</li>
-                    <li>Unlimited Members</li>
-                    <li>Unlimited Support</li>
-                </ul>
-                <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-ghost">Get Free</a>
-            </div>
-        </div>
-    </div>
     <!-- client -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
