--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-1.jpg" alt="Anti-spam" class="mx-auto">
                 <h4>Movelaria</h4>
-                <p>Pequena descrição da área</p>
+                <p>Componentes e Fixadores</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-2.jpg" alt="Phishing Detect" class="mx-auto">
                 <h4>Elétrica</h4>
-                <p>Ne error antiopam usu. Sed vocen concludaturque ea</p>
+                <p>Perfis e Eletrodutos</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-3.jpg" alt="Smart Scan" class="mx-auto">
                 <h4>Ferragens</h4>
-                <p>Et usu ocurreret elaboraret doctus prodesse assueverit.</p>
+                <p>Ferramentas e Acessórios</p>
             </div>
         </div>
     </div>
