--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
   <tbody >
   
     <tr style="background-color: rgba(0, 0, 0, 0.30);">
-	  <td><a href="#" target="_blank"><i class="icon fa fa-download"></i> CATALOGO1.PDF</a></td>
+	  <td><a href="https://www.hafele.com.br/INTERSHOP/web/WFS/Haefele-HBR-Site/pt_BR/-/BRL/Static-View/pdfcatalog/pt_BR/OGH_2018_FF/index.html?startpage=0.1#page_0.1" target="_blank"><i class="icon fa fa-download"></i> Catálogo HÄFELE</a></td>
     </tr>
 	<tr style="background-color: rgba(0, 0, 0, 0.30);">
-	  <td><a href="#" target="_blank"><i class="icon fa fa-download"></i> CATALOGO1.PDF</a></td>
+	  <td><a href="pdf/componentes_e_perfis_eletricos.pdf" target="_blank"><i class="icon fa fa-download"></i> COMPONENTES E PERFIS ELÉTRICOS.PDF</a></td>
     </tr>
 	<tr style="background-color: rgba(0, 0, 0, 0.30);">
 	  <td><a href="#" target="_blank"><i class="icon fa fa-download"></i> CATALOGO1.PDF</a></td>
