--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	  <td><a href="https://issuu.com/mundialprime/docs/catalogo_aeroflex" target="_blank"><i class="icon fa fa-download"></i> CATÁLOGO AEROFLEX.PDF</a></td>
     </tr>
 	<tr style="background-color: rgba(0, 0, 0, 0.30);">
-	  <td><a href="catalogo_aeroflex.pdf" target="_blank"><i class="icon fa fa-download"></i> TABELA DE PRODUTOS AEROFLEX.PDF</a></td>
+	  <td><a href="pdf/catalogo_aeroflex.pdf" target="_blank"><i class="icon fa fa-download"></i> TABELA DE PRODUTOS AEROFLEX.PDF</a></td>
     </tr>
 	<tr style="background-color: rgba(0, 0, 0, 0.30);">
 	  <td><a href="https://www.hafele.com.br/INTERSHOP/web/WFS/Haefele-HBR-Site/pt_BR/-/BRL/Static-View/pdfcatalog/pt_BR/OGH_2018_FF/index.html?startpage=0.1#page_0.1" target="_blank"><i class="icon fa fa-download"></i> CATÁLOGO HÄFELE</a></td>
