--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
         <div class="container">
 		<br>
 		<br>
-            <div class="row justify-content-between text-center text-md-left">
-                <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
+            <div class="row justify-content-between text-center">
+                <div data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" class="col-md-12 flex-md-last">
+				    <img src="img/logo.png" class="mx-auto d-block">
+					<br>
                     <h2 class="font-weight-bold"><font color="#fff">Baixe Nossos Catálogos</font></h2>
                     <p class="my-4"><font color="#fff">Se você não encontrar o que estava procurando,</font>
                         <br> <a href="https://api.whatsapp.com/send?phone=5554981571186&t" target="_blank">Entre em Contato</a> <font color="#fff">para saber mais!</font></p>
@@ -113,7 +115,7 @@
   <table style="TABLE-LAYOUT: fixed;" class="table"  bgcolor="#64686d">
   <thead style="background-color:#2D343E;">
     <tr>
-      <th scope="col"><font color="#fff">Baixar Catálogo</font></th>
+      <th scope="col"><center><font color="#fff">Baixar Catálogo</font></center></th>
     </tr>
   </thead>
   <tbody >
@@ -144,10 +146,6 @@
 </table>
 
 </div>
-                </div>
-				<br>
-                <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6  flex-md-first">
-                    <img src="img/logo.png" alt="Safe and reliable" class="mx-auto d-block">
                 </div>
             </div>
         </div>
